--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,10 @@ reqwest = {version="0.10.4", features = ["json"]}
 serde = "1.0.105"
 serde_json = "1.0.50"
 multibase = "0.8.0"
+tree_magic = "0.2.3"
+chardet = "0.2.4"
+lazy_static = "1.4.0"
+protobuf = "2.12.0"
+
+[build-dependencies]
+protobuf-codegen-pure = "2.3"
