--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ tree_magic = "0.2.3"
 chardet = "0.2.4"
 lazy_static = "1.4.0"
 protobuf = "2.12.0"
+whatlang = "0.7.3"
+chardetng = "0.1.6"
 
 [build-dependencies]
 protobuf-codegen-pure = "2.3"
