--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ lazy_static = "1.4.0"
 protobuf = "2.12.0"
 whatlang = "0.7.3"
 chardetng = "0.1.6"
+percent-encoding = "2.1.0"
 
 [build-dependencies]
 protobuf-codegen-pure = "2.3"
