--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL='postgres://localhost/ipfs'
 IPFS_RESOLVER_API_URL='http://localhost:5001/'
 IPFS_RESOLVER_TIMEOUT_SECS='30'
+DB_EXPORTER_PROMETHEUS_LISTEN_ADDR='127.0.0.1:4545'
