--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -7,14 +7,14 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-failure = "0.1.7"
-log = "0.4.8"
-diesel = { version = "1.4.4", features = ["postgres","chrono"] }
-dotenv = "0.15.0"
-lazy_static = "1.4.0"
-chrono = "0.4.11"
-ipfs-api = "0.7.1"
-whatlang = "0.7.3"
-cid = "0.4.0"
-multibase = "0.8.0"
-chardet = "0.2.4"
+failure = "^0.1"
+log = "^0.4"
+diesel = { version = "^1", features = ["postgres","chrono"] }
+dotenv = "^0.15"
+lazy_static = "^1"
+chrono = "^0.4"
+ipfs-api = "^0.7"
+whatlang = "^0.7"
+cid = "^0.4"
+multibase = "^0.8"
+chardet = "^0.2"
