--- a/db-exporter/Cargo.toml
+++ b/db-exporter/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ipfs-resolver-common = {path="../common"}
 ipfs-resolver-db = {path = "../db"}
 failure = "0.1.7"
 log = "0.4.8"
