--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ipfs-resolver-common = {path="../common"}
 failure = "^0.1"
 log = "^0.4"
 diesel = { version = "^1", features = ["postgres","chrono"] }
