--- a/.env
+++ b/.env
@@ -2,3 +2,10 @@ DATABASE_URL='postgres://localhost/ipfs'
 IPFS_RESOLVER_API_URL='http://localhost:5001/'
 IPFS_RESOLVER_TIMEOUT_SECS='30'
 DB_EXPORTER_PROMETHEUS_LISTEN_ADDR='127.0.0.1:4545'
+WANTLIST_LOGGING_METHOD='file,tcp'
+WANTLIST_LOGGING_TCP_ADDRESS='localhost:4321'
+WANTLIST_LOGGING_BUFFER_SIZE=5
+WANTLIST_CLIENT_PROMETHEUS_LISTEN_ADDR='127.0.0.1:7654'
+DB_EXPORTER_PROMETHEUS_LISTEN_ADDR='127.0.0.1:4545'
+PARALLEL_RESOLVES=64
+DB_EXPORTER_SCRAPE_INTERVAL_SECONDS=5
