--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2018"
 log = "^0.4"
 flexi_logger = "^0.15"
 failure = "^0.1"
+serde = "1.0.110"
+chrono = { version="0.4.11", features = ["serde"] }
