--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 ipfs-resolver-common = {path="../common"}
 failure = "^0.1"
 log = "^0.4"
-diesel = { version = "^1", features = ["postgres","chrono"] }
+diesel = { version = "^1", features = ["postgres","chrono","r2d2"] }
 dotenv = "^0.15"
 lazy_static = "^1"
 chrono = "^0.4"
