--- a/resolver/Cargo.toml
+++ b/resolver/Cargo.toml
@@ -14,15 +14,16 @@ log = "0.4.8"
 dotenv = "0.15.0"
 flexi_logger = "0.15.2"
 ipfs-api = "0.7.1"
-tokio = { version = "0.2.18", features = ["rt-threaded","macros"] }
+#tokio = { version = "0.2.18", features = ["rt-threaded","macros","sync"] }
 cid = "0.4.0"
 hyper = "0.13.5"
-reqwest = { version = "0.10.4", features = ["json"] }
+reqwest = { version = "0.10.4", features = ["blocking","json"] }
 serde = "1.0.106"
 serde_json = "1.0.51"
 multibase = "0.8.0"
 tree_magic = "0.2.3"
-chardet = "0.2.4"
+# This is a forked version of the original rust-chardet with a fix for an unreachable! panic.
+chardet = { git = "https://github.com/mrd0ll4r/rust-chardet" }
 lazy_static = "1.4.0"
 protobuf = "2.14.0"
 whatlang = "0.7.3"
@@ -30,6 +31,9 @@ chardetng = "0.1.6"
 percent-encoding = "2.1.0"
 chrono = "0.4.11"
 diesel = { version = "1.4.4", features = ["postgres","chrono"] }
+clap = "2.33.1"
+backoff = "0.1.6"
+#futures = "0.3.5"
 
 [build-dependencies]
 protobuf-codegen-pure = "2.14.0"
