--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -12,3 +12,4 @@ flexi_logger = "^0.15"
 failure = "^0.1"
 serde = "1.0.110"
 chrono = { version="0.4.11", features = ["serde"] }
+parity-multiaddr = "0.9.0"
