--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -11,5 +11,10 @@ log = "^0.4"
 flexi_logger = "^0.15"
 failure = "^0.1"
 serde = "1.0.110"
+serde_json = "1.0.51"
 chrono = { version="0.4.11", features = ["serde"] }
 parity-multiaddr = "0.9.0"
+hyper = "0.13.5"
+reqwest = { version = "0.10.4", features = ["blocking","json"] }
+ipfs-api = "0.7.1"
+percent-encoding = "2.1.0"
