--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members=["db","resolver","db-exporter","common","wantlist-client","ipfs-json-to-csv"]
+members=["db","resolver","db-exporter","common","wantlist-client","ipfs-json-to-csv","wantlist-client-lib"]
