--- a/wantlist-client/Cargo.toml
+++ b/wantlist-client/Cargo.toml
@@ -8,15 +8,11 @@ edition = "2018"
 
 [dependencies]
 ipfs-resolver-common = {path="../common"}
-serde = { version = "1.0.106", features = ["derive"] }
-serde_json = "1.0.51"
+wantlist-client-lib = {path="../wantlist-client-lib"}
 tokio = { version = "0.2.18", features = ["rt-core","tcp","sync","rt-threaded","macros","dns"] }
-tokio-util = {version="0.3.1",features=["codec"]}
-bytes = "0.5.4"
 log = "0.4.8"
 flexi_logger = "0.15.2"
 failure = "0.1.7"
-futures = "0.3.4"
 futures-util = "0.3.4"
 chrono = {version="0.4.11",features=["serde"]}
 dotenv = "0.15.0"
