--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,11 @@
 [workspace]
-members=["db","resolver","db-exporter","common","wantlist-client","ipfs-json-to-csv","gateway-finder","wantlist-client-lib"]
+members=[
+"db",
+"resolver",
+"db-exporter",
+"common",
+"wantlist-client",
+"ipfs-json-to-csv",
+"gateway-finder",
+"wantlist-client-lib"
+]
