--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -13,9 +13,9 @@ failure = "^0.1"
 serde = "1.0.110"
 serde_json = "1.0.51"
 chrono = { version="0.4.11", features = ["serde"] }
-parity-multiaddr = "0.9.0"
+parity-multiaddr = "0.11.2"
 hyper = "0.13.5"
 reqwest = { version = "0.10.4", features = ["blocking","json"] }
-ipfs-api = "0.7.1"
+ipfs-api = "^0.13"
 percent-encoding = "2.1.0"
 glob = "^0.3"
