--- a/ipfs-gateway-finder/Cargo.toml
+++ b/ipfs-gateway-finder/Cargo.toml
@@ -17,10 +17,10 @@ multibase = "0.8.0"
 chrono = "0.4.11"
 serde = "1.0.110"
 serde_json = "1.0.51"
-tokio = { version = "0.2.21", features = ["rt-threaded","macros","sync"] }
+tokio = { version = "^1", features = ["rt-multi-thread","macros","sync"] }
 rand = "0.7.3"
 parity-multiaddr = "0.9.0"
-ipfs-api = "0.7.2"
+ipfs-api = "0.13.0"
 cid = "0.5.1"
 http = "0.2.1"
 csv = "1.1.6"
