--- a/wantlist-client-lib/Cargo.toml
+++ b/wantlist-client-lib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wantlist-client-lib"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Leo Balduf <leobalduf@gmail.com>"]
 edition = "2018"
 
@@ -8,11 +8,15 @@ edition = "2018"
 
 [dependencies]
 ipfs-resolver-common = {path="../common"}
-tokio = { version = "0.2.18", features = ["tcp","sync","macros"] }
-tokio-util = {version="0.3.1",features=["codec"]}
-bytes = "0.5.4"
-log = "0.4.8"
-futures = "0.3.4"
-futures-util = "0.3.4"
+tokio = { version = "^1", features = ["net","sync","macros"] }
+tokio-util = {version="^0.6",features=["codec"]}
+tokio-serde = {version="^0.8",features=["json"]}
+bytes = "^1"
+log = "^0.4"
+futures = "^0.3"
+futures-util = "^0.3"
+chrono = { version="^0.4", features = ["serde"] }
+multiaddr = "^0.13"
+serde = "1.0.110"
 serde_json = "1.0.51"
-failure = "0.1.7"
+failure = "^0.1"
