*: implement plugin API v3, HTTP API v1, rename projects

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,16 @@
 [workspace]
-members=[
-"db",
-"resolver",
-"db-exporter",
-"common",
-"wantlist-client",
-"ipfs-json-to-csv",
-"ipfs-gateway-finder",
-"wantlist-client-lib",
-"ipfs-walk-tree",
-"cid-decode",
-"csv-to-graph",
-"unify-bitswap-traces",
+members = [
+    "db",
+    "resolver",
+    "db-exporter",
+    "common",
+    "bitswap-monitoring-client",
+    "ipfs-json-to-csv",
+    "ipfs-gateway-finder",
+    "bitswap-monitoring-client-lib",
+    "ipfs-walk-tree",
+    "cid-decode",
+    "csv-to-graph",
+    "unify-bitswap-traces",
+    "bitswap-discovery-probe",
 ]
