--- a/bitswap-discovery-probe/Cargo.toml
+++ b/bitswap-discovery-probe/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "wantlist-client"
-version = "0.3.0"
+name = "bitswap-discovery-probe"
+version = "0.1.0"
 authors = ["Leo Balduf <leobalduf@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 ipfs-resolver-common = { path = "../common" }
-wantlist-client-lib = { path = "../wantlist-client-lib" }
+wantlist-client-lib = { path = "../bitswap-monitoring-client-lib" }
 tokio = { version = "1", features = ["rt", "net", "sync", "rt-multi-thread","time", "macros"] }
 log = "0.4.14"
 flexi_logger = "0.19.6"
@@ -20,3 +20,8 @@ lazy_static = "1.4.0"
 serde = "1.0.110"
 serde_yaml = "0.8.13"
 clap = "2.33.3"
+cid = "0.8.2"
+waitgroup = "0.1.2"
+futures = "0.3.19"
+multiaddr = "0.13.0"
+csv = "1.1.6"
