--- a/bitswap-monitoring-client/config.yaml
+++ b/bitswap-monitoring-client/config.yaml
@@ -1,5 +1,13 @@
 # This is a config file for the bitswap-monitoring-client tool.
+
+# Address to listen and serve prometheus metrics on.
+prometheus_address: "0.0.0.0:8088"
+
+# Specifies the path to the MaxMind GeoLite databases.
+# Defaults to /usr/local/share/GeoIP if unspecified.
+#geoip_database_path: "/usr/local/share/GeoIP"
+
+# List of monitors to connect to.
 monitors:
   - name: "local"
     address: "127.0.0.1:8181"
-prometheus_address: "0.0.0.0:8088"
