--- a/ipfs-gateway-finder/Cargo.toml
+++ b/ipfs-gateway-finder/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "ipfs-gateway-finder"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Leo Balduf <leobalduf@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -13,7 +13,7 @@ failure = "0.1.7"
 log = "0.4.8"
 flexi_logger = "0.15.2"
 futures-util = "0.3.17"
-reqwest = { version = "0.11", features = ["blocking","json"] }
+reqwest = { version = "0.11", features = ["json","rustls-tls-native-roots"],default-features = false }
 multibase = "0.8.0"
 chrono = "0.4.11"
 serde = "1.0.137"
@@ -21,7 +21,7 @@ serde_json = "1.0.81"
 tokio = { version = "^1", features = ["rt-multi-thread","macros","sync"] }
 rand = "0.7.3"
 parity-multiaddr = "0.9.0"
-ipfs-api = "0.13.0"
+ipfs-api-backend-hyper = {version="0.4",features = ["with-hyper-rustls"],default-features = false}
 cid = "0.5.1"
 http = "0.2.1"
 csv = "1.1.6"
