--- a/ipfs-monitoring-plugin-client/Cargo.toml
+++ b/ipfs-monitoring-plugin-client/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "ipfs_monitoring_plugin_client"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Leo Balduf <leobalduf@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -21,4 +21,4 @@ serde = "1.0.137"
 serde_json = "1.0.81"
 failure = "^0.1"
 flate2 = "^1"
-reqwest = { version = "0.11.10", features = ["json"] }
+reqwest = { version = "0.11",default-features = false, features = ["json", "rustls-tls-native-roots"] }
