--- a/bitswap-monitoring-client/Cargo.toml
+++ b/bitswap-monitoring-client/Cargo.toml
@@ -9,13 +9,13 @@ ipfs-resolver-common = { path = "../common" }
 ipfs_monitoring_plugin_client = { path = "../ipfs-monitoring-plugin-client" }
 tokio = { version = "1", features = ["rt", "net", "sync", "rt-multi-thread","time", "macros"] }
 log = "0.4.14"
-flexi_logger = "0.19.6"
+flexi_logger = "0.22.5"
 failure = "0.1.8"
 futures-util = "0.3.17"
 chrono = { version = "0.4.19", features = ["serde"] }
-prometheus_exporter = "0.4.1"
+prometheus_exporter = "0.8.4"
 # This needs to be matching the version prometheus_exporter uses!
-prometheus = { version = "0.7.0", features = ["process"] }
+prometheus = { version = "0.13", features = ["process"] }
 lazy_static = "1.4.0"
 serde = "1.0.137"
 serde_yaml = "0.8.24"
@@ -25,7 +25,7 @@ clap = "2.33.3"
 maxminddb = "0.23.0"
 
 # Multiaddress parser.
-multiaddr = "^0.13"
+multiaddr = "0.14"
 
 # ISO 3166-1 countries.
 celes = "2.2.0"
