--- a/ipfs-monitoring-plugin-client/Cargo.toml
+++ b/ipfs-monitoring-plugin-client/Cargo.toml
@@ -16,7 +16,7 @@ log = "^0.4"
 futures = "^0.3"
 futures-util = "^0.3"
 chrono = { version = "^0.4", features = ["serde"] }
-multiaddr = "^0.13"
+multiaddr = "0.14"
 serde = "1.0.137"
 serde_json = "1.0.81"
 failure = "^0.1"
