--- a/cid-decode/Cargo.toml
+++ b/cid-decode/Cargo.toml
@@ -12,6 +12,4 @@ failure = "0.1.7"
 log = "0.4.8"
 dotenv = "0.15.0"
 flexi_logger = "0.22.5"
-cid = "^0.5"
-multibase = "^0.8"
-multihash = "0.11.2"
+cid = "0.7"
