--- a/bitswap-monitoring-client/Cargo.toml
+++ b/bitswap-monitoring-client/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 [dependencies]
 ipfs-resolver-common = { path = "../common" }
 ipfs_monitoring_plugin_client = { path = "../ipfs-monitoring-plugin-client" }
-tokio = { version = "1", features = ["rt", "net", "sync", "rt-multi-thread","time", "macros"] }
+tokio = { version = "1", features = ["rt", "net", "sync", "rt-multi-thread","time", "macros", "signal"] }
 log = "0.4.14"
 flexi_logger = "0.22.5"
 failure = "0.1.8"
