--- a/bitswap-monitoring-client/config.yaml
+++ b/bitswap-monitoring-client/config.yaml
@@ -7,8 +7,8 @@ prometheus_address: "0.0.0.0:8088"
 # Defaults to /usr/local/share/GeoIP if unspecified.
 #geoip_database_path: "/usr/local/share/GeoIP"
 
-# Specifies where the gateway file is located.
-# In the gateway file every line should be the id of an ipfs-gateway.
+# Specifies the path to a public gateway ID file.
+# Each line in the file should contain one peer ID.
 # If not provided all traffic will be logged as non-gateway-traffic.
 # Defaults to empty, i.e., no tagging of gateway traffic.
 #gateway_file_path: "/usr/local/share/gateways.txt"
