--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -15,3 +15,4 @@ serde_json = "1.0.89"
 chrono = { version="0.4.22", features = ["serde"] }
 parity-multiaddr = "0.11.2"
 glob = "^0.3"
+serde_repr = "^0.1"
