--- a/ipfs-monitoring-plugin-client/Cargo.toml
+++ b/ipfs-monitoring-plugin-client/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
 name = "ipfs_monitoring_plugin_client"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["Leo Balduf <leobalduf@gmail.com>"]
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 ipfs-resolver-common = { path = "../common" }
@@ -22,3 +20,5 @@ serde_json = "1.0.89"
 failure = "^0.1"
 flate2 = "^1"
 reqwest = { version = "0.11",default-features = false, features = ["json", "rustls-tls-native-roots"] }
+lapin = { version = "2.1.1", default-features = false, features = ["rustls"] }
+serde_repr = "^0.1"
