--- a/bitswap-monitoring-client/config.yaml
+++ b/bitswap-monitoring-client/config.yaml
@@ -13,7 +13,10 @@ prometheus_address: "0.0.0.0:8088"
 # Defaults to empty, i.e., no tagging of gateway traffic.
 #gateway_file_path: "/usr/local/share/gateways.txt"
 
-# List of monitors to connect to.
-monitors:
-  - name: "local"
-    address: "127.0.0.1:8181"
+# List of AMQP data sources to connect to.
+amqp_servers:
+  # Address of the AMQP server, using amqp or amqps (TLS transport) scheme.
+  - amqp_server_address: "amqp://localhost:5672/%2f"
+    # A list of monitors to subscribe to via this data source.
+    monitor_names:
+      - "local"
