--- a/ipfs-gateway-finder/Cargo.toml
+++ b/ipfs-gateway-finder/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ipfs-gateway-finder"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Leo Balduf <leobalduf@gmail.com>"]
 edition = "2021"
 
@@ -20,9 +20,9 @@ serde = "1.0.152"
 serde_json = "1.0.95"
 tokio = { version = "^1", features = ["rt-multi-thread","macros","sync"] }
 rand = "0.8.5"
-parity-multiaddr = "0.11.2"
 ipfs-api-backend-hyper = {version="0.6",features = ["with-hyper-rustls"],default-features = false}
 cid = "0.10.1"
 http = "0.2.1"
 csv = "1.2.0"
 clap = "2.33.3"
+multiaddr = "0.17.1"
