--- a/bitswap-monitoring-client/Cargo.toml
+++ b/bitswap-monitoring-client/Cargo.toml
@@ -7,11 +7,13 @@ edition = "2021"
 [dependencies]
 ipfs-resolver-common = { path = "../common" }
 ipfs_monitoring_plugin_client = { path = "../ipfs-monitoring-plugin-client" }
-tokio = { version = "1", features = ["rt", "net", "sync", "rt-multi-thread", "time", "macros", "signal", "fs"] }
+tokio = { version = "^1.21", features = ["rt", "net", "sync", "rt-multi-thread", "time", "macros", "signal", "fs", "io-util"] }
 log = "0.4.21"
 flexi_logger = "0.28.5"
 failure = "0.1.8"
 futures-util = "0.3.29"
+tokio-util = "0.7.10"
+futures = "0.3.30"
 chrono = { version = "0.4.31", features = ["serde"] }
 prometheus_exporter = "0.8.4"
 # This needs to be matching the version prometheus_exporter uses!
@@ -29,3 +31,7 @@ multiaddr = "0.17"
 
 # ISO 3166-1 countries.
 celes = "2.4.0"
+
+# Logging to file
+async-compression = { version = "0.3.15" , default-features = false, features=["tokio","gzip"]}
+serde_json = "1.0.96"
